[gd_scene load_steps=12 format=3 uid="uid://c3vcvhh4d8hd7"]

[ext_resource type="Texture2D" uid="uid://dkpxkdk1xf0ea" path="res://assets/graphics/misc/color_defaults.png" id="1"]
[ext_resource type="Texture2D" uid="uid://d0v821l01w7go" path="res://assets/graphics/misc/color_switch.png" id="2"]
[ext_resource type="Script" path="res://src/UI/ColorPickers/ColorPickers.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://3pmb60gpst7b" path="res://src/UI/Nodes/TransparentChecker.tscn" id="4"]
[ext_resource type="Shader" path="res://src/Shaders/TransparentChecker.gdshader" id="5"]

[sub_resource type="ButtonGroup" id="ButtonGroup_02x7w"]

[sub_resource type="ShaderMaterial" id="1"]
shader = ExtResource("5")
shader_parameter/size = 10.0
shader_parameter/alpha = 1.0
shader_parameter/color1 = Color(0.7, 0.7, 0.7, 1)
shader_parameter/color2 = Color(1, 1, 1, 1)
shader_parameter/offset = Vector2(0, 0)
shader_parameter/scale = Vector2(0, 0)
shader_parameter/rect_size = Vector2(0, 0)
shader_parameter/follow_movement = false
shader_parameter/follow_scale = false

[sub_resource type="InputEventAction" id="InputEventAction_5llr2"]
action = &"switch_colors"

[sub_resource type="Shortcut" id="19"]
events = [SubResource("InputEventAction_5llr2")]

[sub_resource type="InputEventAction" id="InputEventAction_nptxe"]
action = &"reset_colors_default"

[sub_resource type="Shortcut" id="Shortcut_uay2n"]
events = [SubResource("InputEventAction_nptxe")]

[node name="ColorPickers" type="PanelContainer"]
offset_right = 298.0
offset_bottom = 300.0
script = ExtResource("3")

[node name="ColorPickersHorizontal" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="ButtonVBoxContainer" type="VBoxContainer" parent="ColorPickersHorizontal"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2

[node name="ColorButtons" type="Control" parent="ColorPickersHorizontal/ButtonVBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_vertical = 0

[node name="RightColorButton" type="Button" parent="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 30.0
offset_top = 28.0
offset_right = 62.0
offset_bottom = 60.0
mouse_default_cursor_shape = 2
toggle_mode = true
button_group = SubResource("ButtonGroup_02x7w")

[node name="RightColorRect" type="ColorRect" parent="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons/RightColorButton"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 30.0
offset_bottom = 30.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="LeftColorButton" type="Button" parent="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 38.0
offset_bottom = 36.0
mouse_default_cursor_shape = 2
toggle_mode = true
button_pressed = true
button_group = SubResource("ButtonGroup_02x7w")

[node name="LeftColorRect" type="ColorRect" parent="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons/LeftColorButton"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 30.0
offset_bottom = 30.0
mouse_filter = 2
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="CopyAverage" type="Button" parent="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons"]
custom_minimum_size = Vector2(22, 22)
layout_mode = 2
offset_left = 8.0
offset_top = 36.0
offset_right = 30.0
offset_bottom = 58.0
size_flags_horizontal = 4
mouse_default_cursor_shape = 2
button_mask = 3

[node name="AverageColor" type="ColorRect" parent="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons/CopyAverage"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -9.0
offset_top = -9.0
offset_right = 9.0
offset_bottom = 9.0
mouse_filter = 2
metadata/_edit_lock_ = true

[node name="TransparentChecker" parent="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons/CopyAverage/AverageColor" instance=ExtResource("4")]
unique_name_in_owner = true
show_behind_parent = true
material = SubResource("1")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="ColorSwitch" type="TextureButton" parent="ColorPickersHorizontal/ButtonVBoxContainer" groups=["UIButtons"]]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Switch left and right colors
(%s)"
mouse_default_cursor_shape = 2
shortcut = SubResource("19")
shortcut_in_tooltip = false
texture_normal = ExtResource("2")

[node name="ColorDefaults" type="TextureButton" parent="ColorPickersHorizontal/ButtonVBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Reset the colors to their default state (black for left, white for right)"
mouse_default_cursor_shape = 2
shortcut = SubResource("Shortcut_uay2n")
texture_normal = ExtResource("1")

[node name="ColorPicker" type="ColorPicker" parent="ColorPickersHorizontal"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
alignment = 1
can_add_swatches = false
color_modes_visible = false
sliders_visible = false
hex_visible = false
presets_visible = false

[connection signal="toggled" from="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons/LeftColorButton" to="." method="_on_left_color_button_toggled"]
[connection signal="button_down" from="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons/CopyAverage" to="." method="_on_CopyAverage_button_down"]
[connection signal="button_up" from="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons/CopyAverage" to="." method="_on_CopyAverage_button_up"]
[connection signal="gui_input" from="ColorPickersHorizontal/ButtonVBoxContainer/ColorButtons/CopyAverage" to="." method="_on_copy_average_gui_input"]
[connection signal="pressed" from="ColorPickersHorizontal/ButtonVBoxContainer/ColorSwitch" to="." method="_on_ColorSwitch_pressed"]
[connection signal="pressed" from="ColorPickersHorizontal/ButtonVBoxContainer/ColorDefaults" to="." method="_on_ColorDefaults_pressed"]
[connection signal="color_changed" from="ColorPickersHorizontal/ColorPicker" to="." method="_on_color_picker_color_changed"]
